--- a/global.css
+++ b/global.css
@@ -4,7 +4,7 @@ body {
 }
 
 :root {
-  /* fonts */
+  /* fonts
   --a: "Open Sans";
   --font-font-awesome-6-free: "Font Awesome 6 Free";
   --font-amstelvaralpha: AmstelvarAlpha;
@@ -50,7 +50,7 @@ body {
   --gap-5xl: 24px;
   --gap-xs: 12px;
 
-  /* Paddings */
+  /* Paddings */  
   --padding-lgi: 19px;
   --padding-7xl: 26px;
   --padding-mini: 15px;
@@ -60,5 +60,5 @@ body {
   --padding-281xl: 300px;
 
   /* border radiuses */
-  --br-141xl: 160px;
+  --br-141xl: 160px; */
 }
