--- a/index.css
+++ b/index.css
@@ -1257,4 +1257,22 @@
   color: var(--dark);
   font-family: var(--a);
 }
+.menu {
+  background-color: black;
+  display: flex;
+}
 
+.item-menu1 {
+  margin-right: 20px;
+}
+
+.item a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.item a:hover {
+  background-color: white;
+  color: black;
+}
